# dictionary

./: .gitignore  README.md  pyproject.toml  setup.py
benchmark/: test_ucr.py
data/: ucr_accuracy-sonic.csv  ucr_characteristics.csv  ucr_feature_space.csv  ucr_runtime-sonic.csv  ucr_subset_dataset_type.csv
notebooks/: classification.ipynb  evaluation.ipynb
weasel/classification/dictionary_based/: __init__.py  _boss.py  _muse.py  _muse_v2.py  _weasel.py  _weasel_v2.py
weasel/transformations/collection/dictionary_based/: __init__.py  _sfa_dilation.py
weasel/transformations/panel/dictionary_based/: __init__.py  _sfa_dilation.py
