[project]
name = "weasel"

version = "0.1.2.2"

description = "A Random Dilated Dictionary Transform for Fast, Accurate and Constrained Memory Time Series Classification"
readme = "README.md"
authors = [
    {name = "patrickzib", email = "void@void.com"}
]
keywords = [
    "machine-learning",
    "time-series",    
    "dictionary",
    "classification",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7,<3.11"
dependencies = [
    "joblib>=1.1.0",
    "sktime>=0.13,<=0.15",
    "numba>=0.55.1",
    "numpy>=1.21.0,<1.25",
    "pandas>=1.1.0,<1.6.0",
    "scikit-learn>=0.24.0,<1.3.0",
    "scipy<2.0.0",
]

[project.urls]
repository = "https://github.com/patrickzib/dictionary"
#documentation = ""
#download = ""

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
