[project]
name = "weasel-classifier"

version = "0.2.0"

description = "A Random Dilated Dictionary Transform for Fast, Accurate and Constrained Memory Time Series Classification"
readme = "README.md"
authors = [
    {name = "patrickzib", email = "void@void.com"}
]
keywords = [
    "machine-learning",
    "time-series",    
    "dictionary",
    "classification",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "joblib>=1.1.1",
    "aeon>=1.0.0",
    "numba>=0.55,<0.62.0",
    "numpy>=1.21.0,<2.3.0",
    "pandas>=2.0.0,<2.3.0",
    "scikit-learn>=1.0.0,<1.7.0",
    "scipy>=1.9.0,<1.16.0",
]

[project.urls]
repository = "https://github.com/patrickzib/dictionary"
#documentation = ""
#download = ""

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

#[tool.pytest.ini_options]
#log_cli = true
#log_cli_level = "INFO"
#log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_cli_date_format = "%Y-%m-%d %H:%M:%S"
